log
Wed 08 May 2024 06:15:52 PM UTC: 
 tests:  1|8
total_score: 0/70
0a2110f
Wed 08 May 2024 06:18:28 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
059459b
Wed 08 May 2024 06:26:37 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  5|7
total_score: 5/70
20a60c0
Wed 08 May 2024 07:25:24 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
79a584c
Wed 08 May 2024 07:26:40 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
2e91462
Wed 08 May 2024 11:59:30 PM UTC: 
 treemap.c | 35 ++++++++++++-----------------------
 1 file changed, 12 insertions(+), 23 deletions(-)
 tests:  4|7
total_score: 5/70
ac452b4
Thu 09 May 2024 12:05:10 AM UTC: 
 treemap.c | 49 ++++++++++++++++++++++---------------------------
 1 file changed, 22 insertions(+), 27 deletions(-)
 tests:  11|6
total_score: 15/70
c046394
Thu 09 May 2024 12:19:08 AM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:102:1: error: expected expression before ‘}’ token
  102 | }
      | ^
treemap.c:100:15: error: unused variable ‘parent’ [-Werror=unused-variable]
  100 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0d94107
Thu 09 May 2024 12:19:34 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
fa256cf
